--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h2>Learn git</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, ducimus dicta, ullam provident officiis vitae animi eaque facilis id fuga magni, adipisci doloremque? Neque voluptas, odio dolorem cumque ipsam eum.</p>
+    <p>Lorem ipsum dolor,gqwg sit amet consectetur adipisicing elit. Dolorum, ducimus dicta, ullam provident officiis vitae animi eaque facilis id fuga magni, adipisci doloremque? Neque voluptas, odio dolorem cumque ipsam eum.</p>
+    <p>Lorem ipsum dolor,gqwg sit amet consectetur adipisicing elit. Dolorum, ducimus dicta, ullam provident officiis vitae animi eaque facilis id fuga magni, adipisci doloremque? Neque voluptas, odio dolorem cumque ipsam eum.</p>
+    <p>Lorem ipsum dolor,gqwg sit amet consectetur adipisicing elit. Dolorum, ducimus dicta, ullam provident officiis vitae animi eaque facilis id fuga magni, adipisci doloremque? Neque voluptas, odio dolorem cumque ipsam eum.</p>
 </body>
 </html>
